Onboarding sonar coverage
Change-Id: I52cfba2f82a1956e0aad57ad17aa18b85445cb36
Signed-off-by: Yaseen Sanderwale <ys00619128@techmahindra.com>